--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "classnames": "^2.3.1",
+    "clsx": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -33,7 +34,7 @@
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^6.2.0",
     "eslint": "^7.32.0",
-    "eslint-config-peggy": "^1.1.4",
+    "eslint-config-peggy": "^1.1.5",
     "fork-ts-checker-webpack-plugin": "^6.3.1",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.0",
