--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "bobby wang",
   "license": "ISC",
   "dependencies": {
+    "@capsizecss/core": "^3.0.0",
+    "@capsizecss/vanilla-extract": "^1.0.0",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@vanilla-extract/css": "^1.3.0",
